# Doc2MD

./: .env.example  .gitattributes  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
benchmark/: manifest.json  provider-capabilities.json
docs/: benchmark-audit-2026-07-10.md  benchmark-design.md  benchmark-freeze-2026-07-10.json  benchmark-objective.md  benchmark-redesign-validation-2026-07-10.md  case-challenge-profile.md  gemini-3.1-flash-lite-run.md  hard-suite-results.md  redesign-audit-and-plan.md  release-criteria.md  repeat-variance-gpt-5.4-nano.md
docs/results/: anchor-baseline.json
experiments/: notes.md
results/: latest.json
scripts/: audit_benchmark.py  benchmark_prompt.md  generate_benchmark.py  generate_cases.py  generate_gates.py  generate_hard_benchmark.py  test_audit_benchmark.py  validate_benchmark.py
src/: aggregation.ts  audit.ts  auditPages.ts  auditReference.test.ts  auditReference.ts  auditScorer.test.ts  auditScorer.ts  auditTextLayer.test.ts  auditTextLayer.ts  bench.ts  benchmarkFingerprint.ts  buildRepeatValidationReport.ts  cache.ts  captureValidationSnapshot.ts  cohortFingerprint.test.ts  cohortFingerprint.ts  concurrency.test.ts  concurrency.ts  evaluator-client.ts  evaluator.ts  manifest.test.ts  manifest.ts  modelPipeline.ts  models.ts  preflight.ts  pricing.ts  repeatValidation.ts  report.test.ts  report.ts  run.ts  runCache.test.ts  runPolicy.test.ts  runRuntime.test.ts  runRuntime.ts  run_case.ts  score.test.ts  score.ts  scorerMutationMatrix.test.ts  summary.test.ts  summary.ts
(+619 files in other folders)
