[project]
name = "doc2md-benchmark-tools"
version = "0.1.0"
description = "Deterministic document generation and validation tools for Doc2MD"
requires-python = ">=3.11,<3.15"
dependencies = [
  "pdfplumber==0.11.9",
  "pillow==12.2.0",
  "pypdf==6.10.0",
  "python-docx==1.2.0",
  "reportlab==4.4.9",
]

[tool.uv]
package = false
